--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -12,3 +12,20 @@ h4 {
   margin: 0;
   padding: 0;
 }
+
+h1 {
+  font-size: 2rem;
+  line-height: 2rem;
+  padding: 0 0 2rem 0;
+}
+
+h2 {
+  font-size: 1.5rem;
+  line-height: 1.5rem;
+  padding: 0 0 1rem 0;
+}
+
+body,
+#q-app {
+  height: 100vh;
+}
