style changes and create quick reminder component base

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,8 +12,8 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #6200ff;
-$secondary: #26a69a;
+$primary: #2a3346;
+$secondary: #3b585e;
 $accent: #9c27b0;
 
 $dark: #222;
