reminder component, style updates and homepage improvement

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,15 +12,16 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #2a3346;
+$primary: #994141;
 $secondary: #3b585e;
 $accent: #9c27b0;
 
 $dark: #222;
 $dark-page: #222;
 $light: #eee;
+$light-faded: #969696;
 
 $positive: #21ba45;
 $negative: #c10015;
 $info: #31ccec;
-$warning: #f2c037;
+$warning: #f2a737;
